과제 2 프로그래밍

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <h2>과제</h2><hr>
 <ul>
     <li><a href="reports/report1.html">과제 1</a></li>
+    <li><a href="reports/report2.html">과제 2</a></li>
 </ul>
 </body>
 </html>
