--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <ul>
     <li><a href="reports/report1.html">과제 1</a></li>
     <li><a href="reports/report2.html">과제 2</a></li>
+    <li><a href="reports/report3-1.html">과제 3-1</a></li>
+    <li><a href="reports/report3-2.html">과제 3-2</a></li>
 </ul>
 </body>
 </html>
