과제 4 인덱스 추가

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <li><a href="reports/report2.html">과제 2</a></li>
     <li><a href="reports/report3-1.html">과제 3-1</a>
         <a href="reports/report3-2.html">과제 3-2</a></li>
+    <li><a href="reports/report4.html">과제 4</a></li>
 </ul>
 </body>
 </html>
