Diary 메뉴바 꾸미기/carousel 디자인

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
         <li><a class="nav-link scrollto" href="#about">About</a></li>
-        <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
-        <li><a class="nav-link scrollto" href="#services">Labs</a></li>
+        <li><a class="nav-link scrollto" href="#labs">Labs</a></li>
         <li><a class="nav-link scrollto " href="#portfolio">Reports</a></li>
+        <li><a class="nav-link scrollto" href="#resume">Diary</a></li>
         <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
@@ -178,87 +178,16 @@
       </div>
     </section><!-- End About Me Section -->
 
-    <!-- ======= My Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
 
-        <div class="section-title">
-          <span>My Resume</span>
-          <h2>My Resume</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Alice Barkley</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-              </p>
-            </div>
-
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-              </p>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End My Resume Section -->
 
     <!-- ======= My Services Section ======= -->
-    <section id="services" class="services">
+    <section id="labs" class="services">
       <div class="container">
 
         <div class="section-title">
           <span>Labs</span>
           <h2>Labs</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>2022년 2학기 웹프로그래밍 수업을 통해 실습한 자료입니다.</p>
         </div>
 
         <div class="row">
@@ -507,6 +436,167 @@
 
       </div>
     </section><!-- End My Portfolio Section -->
+
+    <!-- ======= My Resume Section ======= -->
+    <section id="resume" class="resume">
+      <div class="container">
+
+        <div class="section-title">
+          <span>Diary</span>
+          <h2>Diary</h2>
+          <p>약 2년 간의 여행, 취미 기록</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <h3 class="resume-title">University</h3>
+            <div class="resume-item pb-0">
+              <h4>Dongduk Women's University</h4>
+              <h5>2021</h5>
+
+              <ul>
+                <li>동덕여자대학교 정보통계학과 입학</li>
+                <li>제 27대 정보통계학과 학생회</li>
+
+              </ul>
+              <h5>2022</h5>
+              <ul>
+                <li>제 28대 정보통계학과 학생회</li>
+                <li>동아리 아웃라이어</li>
+              </ul>
+            </div>
+
+            <h3 class="resume-title">Traveling</h3>
+            <div class="resume-item">
+              <h4>Family</h4>
+              <h5>2021</h5>
+              <ul>
+              <li>부산 가족 여행 <span style="color:darkred">( 2/10~12 )</span></li>
+                <li>청평 카라반 가족 여행 <span style="color:darkred">( 11/27~28 )</span></li></ul>
+              <h5>2022</h5>
+              <ul>
+              <li>제부도 가족 여행 <span style="color:darkred">( 3/19~20 )</span></li>
+                <li>제주도 가족 여행 <span style="color:darkred">( 7/5~7 )</span></li>
+                <li><span style="color:#b02a37;font-weight:bold;">[예정] </span>영국, 프랑스 가족 여행 <span style="color:darkred">( 12/25~1/4 )</span></li>
+              </ul>
+
+            </div>
+            <div class="resume-item">
+              <h4>Friend</h4>
+              <h5>2021</h5>
+              <ul>
+              <li>경기도 근교 글램핑 <span style="color:darkred">( 6/29~30 )</span></li>
+                <li>가평 근교 글램핑 <span style="color:darkred">( 8/29~30 )</span></li></ul>
+              <h5>2022</h5>
+              <ul>
+              <li>인천 여행 <span style="color:darkred">( 2/14~15 )</span></li>
+              <li>대성리 동기 여행 <span style="color:darkred">( 6/26~27 )</span></li>
+                <li>호주 여행 <span style="color:darkred">( 7/13~24 )</span></li></ul>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <h3 class="resume-title">Hobby</h3>
+            <div class="resume-item">
+              <h4>Drawing</h4>
+              <div id="demo" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="6"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="7"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="8"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="9"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="10"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="11"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="12"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="assets/img/carousel/drawing1.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2021.3 그림</p></div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel/drawing2.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2021.5 그림</p></div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel/drawing3.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2021.6 그림</p></div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel/drawing9.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2021.12 그림</p></div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel/drawing4.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2021.12 그림</p></div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel/drawing5.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2022.1 그림</p></div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel/drawing6.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2022.1 그림</p></div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel/drawing7.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2022.2 그림</p></div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel/drawing8.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2022.4 그림</p></div>
+                  </div><div class="carousel-item">
+                    <img src="assets/img/carousel/drawing10.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2022.7 그림</p></div>
+                  </div><div class="carousel-item">
+                    <img src="assets/img/carousel/drawing11.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2022.7 그림</p></div>
+                  </div><div class="carousel-item">
+                    <img src="assets/img/carousel/drawing12.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2022.9 그림</p></div>
+                  </div><div class="carousel-item">
+                    <img src="assets/img/carousel/drawing13.jpg" class="d-block" style="width:100%">
+                    <div class="carousel-caption"><p>2022.11 그림</p></div>
+                  </div>
+
+                  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                  </button>
+                </div>
+              </div>
+
+            </div>
+            <br>
+
+            <div class="resume-item">
+              <h4>Musical</h4>
+              <h5>2021</h5>
+              <ul>
+                <li>뮤지컬 팬텀 - 샤롯데씨어터</li>
+                <li>뮤지컬 헤드윅 - 충무아트센터 대극장</li>
+                <li>뮤지컬 어쩌면 해피엔딩 - 예스24스테이지 1관</li></ul>
+              <h5>2022</h5>
+              <ul>
+                <li>뮤지컬 프랑켄슈타인 - 블루스퀘어 신한카드홀</li>
+                <li>뮤지컬 지킬앤하이드 - 샤롯데씨어터</li>
+                <li>뮤지컬 웃는남자 - 세종문화회관 대극장</li>
+                <li>뮤지컬 엘리자벳 - 블루스퀘어 신한카드홀</li></ul>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End My Resume Section -->
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing">
