--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Laura Bootstrap Template - Index</title>
+  <title>Jiyeon Han</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -47,23 +48,7 @@
         <li><a class="nav-link scrollto" href="#labs">Labs</a></li>
         <li><a class="nav-link scrollto " href="#portfolio">Reports</a></li>
         <li><a class="nav-link scrollto" href="#resume">Diary</a></li>
-        <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-          <ul>
-            <li><a href="#">Drop Down 1</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-              <ul>
-                <li><a href="#">Deep Drop Down 1</a></li>
-                <li><a href="#">Deep Drop Down 2</a></li>
-                <li><a href="#">Deep Drop Down 3</a></li>
-                <li><a href="#">Deep Drop Down 4</a></li>
-                <li><a href="#">Deep Drop Down 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Drop Down 2</a></li>
-            <li><a href="#">Drop Down 3</a></li>
-            <li><a href="#">Drop Down 4</a></li>
-          </ul>
-        </li>
+        <li><a class="nav-link scrollto" href="#musical">Musical</a></li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i></nav>
@@ -74,7 +59,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>JIYEON HAN</h1>
+      <h1>Hi, I'm Jiyeon Han</h1>
       <h2>I am a student majoring in <span style="color:indianred">Information & Statistics</span> at Dongduk Women's University.</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
@@ -100,7 +85,7 @@
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Jiyeon Han</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.aaaa.com</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>School:</strong> <span>Dongduk Women's university</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gyeonggi-do, South Korea</span></li>
                   </ul>
@@ -114,39 +99,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="row mt-n4">
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  <div class="count-box">
-                    <i class="bi bi-emoji-smile" style="color: #20b38e;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
-                  </div>
-                </div>
 
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  <div class="count-box">
-                    <i class="bi bi-journal-richtextr" style="color: #8a1ac2;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  <div class="count-box">
-                    <i class="bi bi-clock" style="color: #2cbdee;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Years of experience</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  <div class="count-box">
-                    <i class="bi bi-award" style="color: #ffb459;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
-                  </div>
-                </div>
-              </div>
             </div><!-- End .content-->
 
             <div class="skills-content ps-lg-4">
@@ -370,7 +323,7 @@
         <div class="section-title">
           <span>My Reports</span>
           <h2>My Reports</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>2022년 2학기 웹프로그래밍 과목을 수강하며 실습한 과제들입니다.</p>
         </div>
 
         <ul id="portfolio-flters" class="d-flex justify-content-center">
@@ -428,7 +381,7 @@
               <h4>Report 4</h4>
               <p>2진수, 파스칼 삼각형 - javascript</p>
               <a href="assets/img/portfolio/report5.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Report 3-4"><i class="bx bx-plus"></i></a>
-              <a href="reports/repot4.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="reports/report4.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -518,59 +471,50 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="assets/img/carousel/drawing1.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2021.3 그림</p></div>
-                  </div>
+                    <div class="carousel-caption"><p>2021.3 그림</p></div></div>
                   <div class="carousel-item">
                     <img src="assets/img/carousel/drawing2.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2021.5 그림</p></div>
-                  </div>
+                    <div class="carousel-caption"><p>2021.5 그림</p></div></div>
                   <div class="carousel-item">
                     <img src="assets/img/carousel/drawing3.jpg" class="d-block" style="width:100%">
                     <div class="carousel-caption"><p>2021.6 그림</p></div>
                   </div>
                   <div class="carousel-item">
                     <img src="assets/img/carousel/drawing9.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2021.12 그림</p></div>
-                  </div>
+                    <div class="carousel-caption"><p>2021.12 그림</p></div></div>
                   <div class="carousel-item">
                     <img src="assets/img/carousel/drawing4.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2021.12 그림</p></div>
-                  </div>
+                    <div class="carousel-caption"><p>2021.12 그림</p></div></div>
                   <div class="carousel-item">
                     <img src="assets/img/carousel/drawing5.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2022.1 그림</p></div>
-                  </div>
+                    <div class="carousel-caption"><p>2022.1 그림</p></div></div>
                   <div class="carousel-item">
                     <img src="assets/img/carousel/drawing6.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2022.1 그림</p></div>
-                  </div>
+                    <div class="carousel-caption"><p>2022.1 그림</p></div></div>
                   <div class="carousel-item">
                     <img src="assets/img/carousel/drawing7.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2022.2 그림</p></div>
-                  </div>
+                    <div class="carousel-caption"><p>2022.2 그림</p></div></div>
                   <div class="carousel-item">
                     <img src="assets/img/carousel/drawing8.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2022.4 그림</p></div>
-                  </div><div class="carousel-item">
+                    <div class="carousel-caption"><p>2022.4 그림</p></div></div>
+                  <div class="carousel-item">
                     <img src="assets/img/carousel/drawing10.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2022.7 그림</p></div>
-                  </div><div class="carousel-item">
+                    <div class="carousel-caption"><p>2022.7 그림</p></div></div>
+                  <div class="carousel-item">
                     <img src="assets/img/carousel/drawing11.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2022.7 그림</p></div>
-                  </div><div class="carousel-item">
+                    <div class="carousel-caption"><p>2022.7 그림</p></div></div>
+                  <div class="carousel-item">
                     <img src="assets/img/carousel/drawing12.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption"><p>2022.9 그림</p></div>
-                  </div><div class="carousel-item">
+                    <div class="carousel-caption"><p>2022.9 그림</p></div></div>
+                  <div class="carousel-item">
                     <img src="assets/img/carousel/drawing13.jpg" class="d-block" style="width:100%">
                     <div class="carousel-caption"><p>2022.11 그림</p></div>
                   </div>
 
                   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                  </button>
+                    <span class="carousel-control-prev-icon"></span></button>
                   <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                  </button>
+                    <span class="carousel-control-next-icon"></span></button>
                 </div>
               </div>
 
@@ -599,89 +543,77 @@
     </section><!-- End My Resume Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+    <section id="musical" class="Musical">
       <div class="container">
 
         <div class="section-title">
-          <span>Pricing</span>
-          <h2>Pricing</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <span>Musical</span>
+          <h2>Musical</h2>
+          <p>직접 봤던 뮤지컬 소개</p>
         </div>
-
         <div class="row">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="box">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+          <div class="col-md-4">
+            <div class="card" style="width:250px; ">
+              <img class="card-img-top" src="assets/img/musical/musical1.gif">
+              <div class="card-body">
+                <h5 class="card-title">팬텀</h5>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured">
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+          <div class="col-md-4">
+            <div class="card" style="width:250px;">
+              <img class="card-img-top" src="assets/img/musical/musical2.gif">
+              <div class="card-body">
+                <h5 class="card-title">헤드윅</h5>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
-            <div class="box">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+          <div class="col-md-4">
+            <div class="card" style="width:250px;margin-right:0px">
+              <img class="card-img-top" src="assets/img/musical/musical3.gif">
+              <div class="card-body">
+                <h5 class="card-title">어쩌면 해피엔딩</h5>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
-            <div class="box">
-              <span class="advanced">Advanced</span>
-              <h3>Ultimate</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+          <div class="col-md-3">
+            <div class="card" style="width:250px; margin-top:50px">
+              <img class="card-img-top" src="assets/img/musical/musical4.gif">
+              <div class="card-body">
+                <h4 class="card-title">프랑켄슈타인</h4>
               </div>
             </div>
           </div>
-
+          <div class="col-md-3">
+            <div class="card" style="width:250px;margin-top:50px">
+              <img class="card-img-top" src="assets/img/musical/musical5.png">
+              <div class="card-body">
+                <h5 class="card-title">지킬앤하이드</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card" style="width:250px;margin-top:50px">
+              <img class="card-img-top" src="assets/img/musical/musical6.gif">
+              <div class="card-body">
+                <h5 class="card-title">웃는 남자</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card" style="width:250px;margin-top:50px">
+              <img class="card-img-top" src="assets/img/musical/musical7.gif">
+              <div class="card-body">
+                <h5 class="card-title">엘리자벳</h5>
+              </div>
+            </div>
+          </div>
         </div>
+
 
       </div>
+
+
     </section><!-- End Pricing Section -->
 
     <!-- ======= Contact Me Section ======= -->
