뮤지컬 탭 세부 디테일 추가

--- a/index.html
+++ b/index.html
@@ -552,27 +552,39 @@
           <p>직접 봤던 뮤지컬 소개</p>
         </div>
         <div class="row">
-          <div class="col-md-4">
-            <div class="card" style="width:250px; ">
+          <div class="col-md-3">
+            <div class="card" style="width:250px; margin-top:50px">
               <img class="card-img-top" src="assets/img/musical/musical1.gif">
               <div class="card-body">
-                <h5 class="card-title">팬텀</h5>
+                <h5 class="card-title" style="color:#6a1a21;font-style:italic;font-weight:bold">팬텀<br>
+                  <span style="color:black;font-weight:normal;font-size:15px">2021.03.17 ~ 2021.06.27</span><br>
+                  <span style="color:black;font-size:13px">샤롯데씨어터</span></h5>
+                <p class="card-text" style="font-size:20px"><hr>박은태 카이 전동석 규현 <br> 김소현 임선혜 이지혜 김수<br><br>
+                  <span style="font-size:13px">공연시간 180분 (인터미션 포함)</span></p>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="card" style="width:250px;">
+          <div class="col-md-3">
+            <div class="card" style="width:250px; margin-top:50px">
               <img class="card-img-top" src="assets/img/musical/musical2.gif">
               <div class="card-body">
-                <h5 class="card-title">헤드윅</h5>
+                <h5 class="card-title" style="color:#6a1a21;font-style:italic;font-weight:bold">헤드윅<br>
+                  <span style="color:black;font-weight:normal;font-size:15px">2021.07.30 ~ 2021.10.31</span><br>
+                  <span style="color:black;font-size:13px">충무아트센터 대극장</span></h5>
+                <p class="card-text" style="font-size:10px"><hr>조승우 이규형 고은성 렌<br> 이영미 김려원 제이민 유리아<br><br>
+                  <span style="font-size:13px">공연시간 135분 (캐스팅별 상이)</span></p>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="card" style="width:250px;margin-right:0px">
+          <div class="col-md-3">
+            <div class="card" style="width:250px; margin-top:50px">
               <img class="card-img-top" src="assets/img/musical/musical3.gif">
               <div class="card-body">
-                <h5 class="card-title">어쩌면 해피엔딩</h5>
+                <h5 class="card-title" style="color:#6a1a21;font-style:italic;font-weight:bold">어쩌면 해피엔딩<br>
+                  <span style="color:black;font-weight:normal;font-size:15px">2021.07.07 ~ 2021.09.05</span><br>
+                  <span style="color:black;font-size:13px">예스24스테이지 1관</span></h5>
+                <p class="card-text" style="font-size:20px"><hr>신성민 임준혁 정욱진<br> 홍지희 해나 한재아<br><br>
+                  <span style="font-size:13px">공연시간 110분 </span></p>
               </div>
             </div>
           </div>
@@ -580,36 +592,56 @@
             <div class="card" style="width:250px; margin-top:50px">
               <img class="card-img-top" src="assets/img/musical/musical4.gif">
               <div class="card-body">
-                <h4 class="card-title">프랑켄슈타인</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card" style="width:250px;margin-top:50px">
-              <img class="card-img-top" src="assets/img/musical/musical5.png">
-              <div class="card-body">
-                <h5 class="card-title">지킬앤하이드</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card" style="width:250px;margin-top:50px">
-              <img class="card-img-top" src="assets/img/musical/musical6.gif">
-              <div class="card-body">
-                <h5 class="card-title">웃는 남자</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card" style="width:250px;margin-top:50px">
-              <img class="card-img-top" src="assets/img/musical/musical7.gif">
-              <div class="card-body">
-                <h5 class="card-title">엘리자벳</h5>
+                <h5 class="card-title" style="color:#6a1a21;font-style:italic;font-weight:bold">프랑켄슈타인<br>
+                  <span style="color:black;font-weight:normal;font-size:15px">2021.11.24 ~ 2022.02.20</span><br>
+                  <span style="color:black;font-size:13px">블루스퀘어 신한카드홀</span></h5>
+                <p class="card-text" style="font-size:20px"><hr>민우혁 전동석 규현<br> 박은태 카이 정택운<br><br>
+                  <span style="font-size:13px">공연시간 175분 (인터미션 포함) </span></p>
               </div>
             </div>
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card" style="width:250px;margin-top:70px">
+              <img class="card-img-top" src="assets/img/musical/musical5.png">
+              <div class="card-body">
+                <h5 class="card-title" style="color:#6a1a21;font-style:italic;font-weight:bold">지킬앤하이드<br>
+                  <span style="color:black;font-weight:normal;font-size:15px">2021.10.19 ~ 2022.05.08</span><br>
+                  <span style="color:black;font-size:13px">샤롯데씨어터</span></h5>
+                <p class="card-text" style="font-size:20px"><hr>신성록 박은태 카이 전동석<br> 선민 정유지 이지혜 해나<br><br>
+                  <span style="font-size:13px">공연시간 170분 (인터미션 포함) </span></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card" style="width:250px;margin-top:70px">
+              <img class="card-img-top" src="assets/img/musical/musical6.gif">
+              <div class="card-body">
+                <h5 class="card-title" style="color:#6a1a21;font-style:italic;font-weight:bold">웃는 남자<br>
+                  <span style="color:black;font-weight:normal;font-size:15px">2022.6.10 ~ 2022.8.22</span><br>
+                  <span style="color:black;font-size:13px">세종문화회관 대극장</span></h5>
+                <p class="card-text" style="font-size:20px"><hr>박효신 박은태 박강현<br>민영기 양준모<br><br>
+                  <span style="font-size:13px">공연시간 180분 (인터미션 포함) </span></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card" style="width:250px;margin-top:70px">
+              <img class="card-img-top" src="assets/img/musical/musical7.gif">
+              <div class="card-body">
+                <h5 class="card-title" style="color:#6a1a21;font-style:italic;font-weight:bold">엘리자벳<br>
+                  <span style="color:black;font-weight:normal;font-size:15px">2022.8.30 ~ 2022.11.13</span><br>
+                  <span style="color:black;font-size:13px">블루스퀘어 신한카드홀</span></h5>
+                <p class="card-text" style="font-size:20px"><hr>옥주현 이지혜<br>신성록 김준수 박은태 민영기<br><br>
+                  <span style="font-size:13px">공연시간 170분 (인터미션 포함) </span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+>
 
       </div>
 
