뮤지컬 탭 세부 디테일 추가(2)-자세히 보기 링크 추가 (새로운 윈도우에서 열수 있도록)

--- a/index.html
+++ b/index.html
@@ -560,7 +560,10 @@
                   <span style="color:black;font-weight:normal;font-size:15px">2021.03.17 ~ 2021.06.27</span><br>
                   <span style="color:black;font-size:13px">샤롯데씨어터</span></h5>
                 <p class="card-text" style="font-size:20px"><hr>박은태 카이 전동석 규현 <br> 김소현 임선혜 이지혜 김수<br><br>
-                  <span style="font-size:13px">공연시간 180분 (인터미션 포함)</span></p>
+                  <span style="font-size:13px">공연시간 180분 (인터미션 포함)</span>
+                </p>
+                <a href="https://emkmusical.com/portfolio/phantom_2021/" target="_blank"
+                   style="color:#0c63e4;font-size:13px;font-style:italic;">자세히 보러 가기</a>
               </div>
             </div>
           </div>
@@ -573,6 +576,8 @@
                   <span style="color:black;font-size:13px">충무아트센터 대극장</span></h5>
                 <p class="card-text" style="font-size:10px"><hr>조승우 이규형 고은성 렌<br> 이영미 김려원 제이민 유리아<br><br>
                   <span style="font-size:13px">공연시간 135분 (캐스팅별 상이)</span></p>
+                <a href="https://www.shownote.com/Ticket/Performance/Details?performanceId=316" target="_blank"
+                   style="color:#0c63e4;font-size:13px;font-style:italic;">자세히 보러 가기</a>
               </div>
             </div>
           </div>
@@ -585,6 +590,8 @@
                   <span style="color:black;font-size:13px">예스24스테이지 1관</span></h5>
                 <p class="card-text" style="font-size:20px"><hr>신성민 임준혁 정욱진<br> 홍지희 해나 한재아<br><br>
                   <span style="font-size:13px">공연시간 110분 </span></p>
+                <a href="https://www.cjenm.com/ko/featured-contents/%EC%96%B4%EC%A9%8C%EB%A9%B4-%ED%95%B4%ED%94%BC%EC%97%94%EB%94%A9/" target="_blank"
+                   style="color:#0c63e4;font-size:13px;font-style:italic;">자세히 보러 가기</a>
               </div>
             </div>
           </div>
@@ -597,6 +604,8 @@
                   <span style="color:black;font-size:13px">블루스퀘어 신한카드홀</span></h5>
                 <p class="card-text" style="font-size:20px"><hr>민우혁 전동석 규현<br> 박은태 카이 정택운<br><br>
                   <span style="font-size:13px">공연시간 175분 (인터미션 포함) </span></p>
+                <a href="https://tickets.interpark.com/goods/21008252" target="_blank"
+                   style="color:#0c63e4;font-size:13px;font-style:italic;">자세히 보러 가기</a>
               </div>
             </div>
           </div>
@@ -612,6 +621,8 @@
                   <span style="color:black;font-size:13px">샤롯데씨어터</span></h5>
                 <p class="card-text" style="font-size:20px"><hr>신성록 박은태 카이 전동석<br> 선민 정유지 이지혜 해나<br><br>
                   <span style="font-size:13px">공연시간 170분 (인터미션 포함) </span></p>
+                <a href="https://www.odmusical.com/production/view?idx=167&ca_id=02" target="_blank"
+                   style="color:#0c63e4;font-size:13px;font-style:italic;">자세히 보러 가기</a>
               </div>
             </div>
           </div>
@@ -624,6 +635,8 @@
                   <span style="color:black;font-size:13px">세종문화회관 대극장</span></h5>
                 <p class="card-text" style="font-size:20px"><hr>박효신 박은태 박강현<br>민영기 양준모<br><br>
                   <span style="font-size:13px">공연시간 180분 (인터미션 포함) </span></p>
+                <a href="https://emkmusical.com/portfolio/2022-the-man-who-laughs/" target="_blank"
+                   style="color:#0c63e4;font-size:13px;font-style:italic;">자세히 보러 가기</a>
               </div>
             </div>
           </div>
@@ -636,6 +649,8 @@
                   <span style="color:black;font-size:13px">블루스퀘어 신한카드홀</span></h5>
                 <p class="card-text" style="font-size:20px"><hr>옥주현 이지혜<br>신성록 김준수 박은태 민영기<br><br>
                   <span style="font-size:13px">공연시간 170분 (인터미션 포함) </span></p>
+                <a href="https://emkmusical.com/portfolio/2022-elisabeth/" target="_blank"
+                   style="color:#0c63e4;font-size:13px;font-style:italic;">자세히 보러 가기</a>
               </div>
             </div>
           </div>
