--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
     <!-- ======= About Me Section ======= -->
     <section id="about" class="about">
+
       <div class="container">
 
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
         <div class="row">
@@ -83,47 +83,32 @@
             <div class="content ps-lg-4 d-flex flex-column justify-content-center">
               <div class="row">
                 <div class="col-lg-6">
-                  <ul>
+                  <p style="font-style:italic;font-weight:bold;font-size:30px; color:#1b4855; margin-top:50px">JIYEON HAN</p>
+                  <ul style="margin-top:50px;">
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Jiyeon Han</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>School:</strong> <span>Dongduk Women's university</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Birth:</strong> <span>2002.07.12</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>grade:</strong> <span>sophomore in university</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gyeonggi-do, South Korea</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
-                  <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                  <ul style="margin-top:143px;">
+                    <li><i class="bi bi-chevron-right"></i> <strong>School:</strong> <span>Dongduk Women's university</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Information & Statistics</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Minor:</strong> <span>Data Science</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Hobby:</strong> <span>Drawing, Musical, Traveling</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>20210870@dongduk.ac.kr</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>instagram:</strong>
+                      <a href="https://www.instagram.com/ser__di_ity/" target="_blank">@ser__di_ity</a></li>
                   </ul>
                 </div>
               </div>
 
             </div><!-- End .content-->
 
-            <div class="skills-content ps-lg-4">
-              <div class="progress">
-                <span class="skill">HTML <i class="val">100%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
 
-              <div class="progress">
-                <span class="skill">CSS <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">JavaScript <i class="val">75%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
 
           </div>
         </div>
@@ -695,14 +680,14 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
-                  <p>contact@example.com</p>
+                  <p>20210870@dongduk.ac.kr</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>+123 456 7890</p>
                 </div>
               </div>
             </div>
