Motto (좌우명) 탭 디자인 / 배경 바꾸기

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a class="nav-link scrollto" href="#about">About</a></li>
         <li><a class="nav-link scrollto" href="#labs">Labs</a></li>
         <li><a class="nav-link scrollto " href="#portfolio">Reports</a></li>
+        <li><a class="nav-link scrollto " href="#Motto">Motto</a></li>
         <li><a class="nav-link scrollto" href="#resume">Diary</a></li>
         <li><a class="nav-link scrollto" href="#musical">Musical</a></li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -222,84 +223,6 @@
       </div>
     </section><!-- End My Services Section -->
 
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
-      <div class="container position-relative">
-
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
 
     <!-- ======= My Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -374,6 +297,90 @@
 
       </div>
     </section><!-- End My Portfolio Section -->
+
+    <section id="Motto" class="testimonials">
+      <div class="container position-relative">
+
+        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/motto1.jpg" class="testimonial-img" alt="">
+                <h3>Alex Ferguson</h3>
+                <h4>a former football coach</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  It is also a skill not to give up.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <br><span style="font-size:13px">포기하지 않는 것도 실력이다.</span>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/motto2.jpg" class="testimonial-img" alt="">
+                <h3>Abraham Lincoln</h3>
+                <h4>the 16th President of the United States</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Most folks are about as happy as they make up their minds to be.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <br><span style="font-size:13px">대부분의 사람은 마음먹은 만큼 행복하다.</span>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/motto3.jpg" class="testimonial-img" alt="">
+                <h3>John Wayne</h3>
+                <h4>actor</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Life is tough, but it's tougher when you're stupid.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <br><span style="font-size:13px">인생은 본래 녹록지 않다. 하지만 멍청한 사람에게는 더욱 녹록지 않다.</span>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/motto4.jpg" class="testimonial-img" alt="">
+                <h3>Kurt Cobain</h3>
+                <h4>Singer</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  I'd rather be hated for who I am than be loved for who I'm not.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <br><span style="font-size:13px">다른 누군가가 되어서 사랑받기보다는 있는 그대로의 나로서 미움받는 것이 낫다.</span>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/motto5.jpg" class="testimonial-img" alt="">
+                <h3>Mahatma Gandhi</h3>
+                <h4>the spiritual leader of India</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  The future depends on what we do in the present.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <br><span style="font-size:13px">미래는 현재 우리가 무엇을 하는 가에 달려 있다.</span>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section><!-- End Testimonials Section -->
+
 
     <!-- ======= My Resume Section ======= -->
     <section id="resume" class="resume">
